[package]
name = "hark"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = "0.2.2"
rodio = "0.22"
# Symphonia (rodio's decoder) has no Opus support, so Opus is decoded here:
# `ogg` demuxes the container, `opus` binds libopus for the codec itself.
ogg = "0.9"
opus = "0.3"
lofty = "0.24"
notify = "8"
# The desktop's media keys and system media controls speak MPRIS over D-Bus.
zbus = "5"
rust-embed = "8"
anyhow = "1"
# Cover-art fetch. The blocking client runs on the GPUI background executor (a
# smol worker, not a tokio context), so its internal runtime does not nest.
# rustls-tls uses the ring provider already in the tree — no aws-lc/cmake, no OpenSSL.
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde_json = "1"

# Audio decoding is unusably slow when dependencies are built without optimizations.
[profile.dev.package."*"]
opt-level = 2
